# Life-2.0

./: CMakeLists.txt  README.md
docs/: ProjectOutline.md
src/container/: Container.cpp  Container.h
